ci: 更新 README 和 CI/CD 文档，调整 GitHub Actions 触发条件，新增开发测试流程，优化发布流程说明

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,9 +1,8 @@
 name: Build and Release Android App
 
 on:
-  # 推送代码时触发
+  # 仅在创建版本标签时触发
   push:
-    branches: [ main, master ]
     tags:
       - 'v*'
   # 允许手动触发
