--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,9 +67,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
     - assets/charpack/
     - assets/bg/
+    - assets/operater/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
